--- a/contact.html
+++ b/contact.html
@@ -85,11 +85,7 @@
             <div class="row">
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <div class="bg-primary text-dark text-center p-4">
-                        <h4 class="m-0"><i class="fa fa-map-marker-alt text-white mr-2"></i>Tema, Ghana</h4>
-                        <p>BJH Logistics Services Ltd</p>
-                        <p>Naaeteh Block Suit 5</p>
-                        <p>Community 5 Main Street</p>
-                        <p>Behind Tema Secondary School </p>
+                        <h4 class="m-0"><i class="fa fa-map-marker-alt text-white mr-2"></i>Mombasa, Kenya</h4>
                     </div>
                    
                 </div>
