--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <div class="d-inline-flex align-items-center text-white">
                     <small><i class="fa fa-phone-alt mr-2"></i>+254721783631</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i> info@nakaiservices.com, imports@nakaiservices.com,accounts</small>
+                    <small><i class="fa fa-envelope mr-2"></i> info@nakaiservices.com, imports@nakaiservices.com</small>
                 </div>
             </div>
     
@@ -46,7 +46,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>Nakai Air and SEA</h1>
+                <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>Nakai Sea and Air</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -95,7 +95,7 @@
                     <div class="contact-form bg-secondary" style="padding: 30px;">
                         <p>Director Name : Rodgers Kai</p>
                         <p>Tel: +254721783631</p>
-                        <p>Email: info@nakaiservices.com, imports@nakaiservices.com,accounts</p>
+                        <p>Email: info@nakaiservices.com, imports@nakaiservices.com</p>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <h3 class="text-primary mb-4">Get In Touch</h3>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Mombasa, Kenya</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>+254721783631</p>
-                    <p><i class="fa fa-envelope mr-2"></i>info@nakaiservices.com, imports@nakaiservices.com,accounts</p>
+                    <p><i class="fa fa-envelope mr-2"></i>info@nakaiservices.com, imports@nakaiservices.com</p>
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
 <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
     <div class="row">
         <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-            <p class="m-0 text-white">&copy; <a href="#">Nakai Air and SEA</a>. All Rights Reserved. 
+            <p class="m-0 text-white">&copy; <a href="#">Nakai Sea and Air</a>. All Rights Reserved. 
             
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
             Developed by <a href="#">Citrax Limited</a>
