--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark">
         <div class="row py-2 px-lg-5">
-            <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
+            <div class="col-lg-10 text-center text-lg-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center text-white">
                     <small><i class="fa fa-phone-alt mr-2"></i>+254721783631</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i> info@nakaiservices.com, imports@nakaiservices.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>info@nakaiseaairservices.com, imports@nakaiseaairservices.com, accounts@nakaiseaairservices.com</small>
                 </div>
             </div>
     
@@ -68,8 +68,8 @@
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid mb-5">
         <div class="container text-center py-5">
-            <h1 class="text-primary mb-4">Nakai Sea and Air limited</h1>
-            <h4 class="text-white display-3 mb-5">Your FOB, Ex-works & Exports Savings Start at Nakai Sea and Air Ltd!</h4>
+            <h1 class="text-primary mb-4">Nakai Sea and Air Services</h1>
+            <h4 class="text-white display-3 mb-5">Your FOB, Ex-works & Exports Savings Start at Nakai Sea and Air Services!</h4>
         </div>
     </div>
     <!-- Header End -->
@@ -193,11 +193,11 @@
     <div class="row pt-5">
         <div class="col-lg-7 col-md-6">
             <div class="row">
-                <div class="col-md-6 mb-5">
+                <div class="col-md-10 mb-5">
                     <h3 class="text-primary mb-4">Get In Touch</h3>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Mombasa, Kenya</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>+254721783631</p>
-                    <p><i class="fa fa-envelope mr-2"></i>info@nakaiservices.com, imports@nakaiservices.com</p>
+                    <p><i class="fa fa-envelope mr-2"></i>info@nakaiseaairservices.com, accounts@nakaiseaairservices.com, imports@nakaiseaairservices.com</p>
                 </div>
             </div>
         </div>
