--- a/contact.html
+++ b/contact.html
@@ -93,8 +93,10 @@
                     <h6 class="text-primary text-uppercase font-weight-bold">Contact Us</h6>
                     <h1 class="mb-4">Contact For Any Queries</h1>
                     <div class="contact-form bg-secondary" style="padding: 30px;">
-                        <p>Director Name : Rodgers Kai</p>
+                        <p>Contact Name : Rodgers Kai</p>
                         <p>Tel: +254721783631</p>
+                        <p>Operations and Pricing manager: Mkutano Karisa</p>
+                        <p>Tel: +254700 288711</p>
                         <p>Email: info@nakaiservices.com, imports@nakaiservices.com</p>
                     </div>
                 </div>
