--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                         <p>Tel: +254721783631</p>
                         <p>Operations and Pricing manager: Mkutano Karisa</p>
                         <p>Tel: +254700 288711</p>
-                        <p>Email: info@nakaiservices.com, imports@nakaiservices.com</p>
+                        <p>Email: info@nakaiseaairservices.com, imports@nakaiseaairservices.com, accounts@nakaiseaairservices.com</p>
                     </div>
                 </div>
             </div>
